[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/GUI/Menu/MenuTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/GUI/Menu/Options.gd" type="Script" id=2]

[node name="Options" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="VBoxContainer" parent="CenterContainer" index="0"]
margin_top = 80.0
margin_bottom = 519.0

[node name="Audio" type="Button" parent="CenterContainer/VBoxContainer" index="2"]
margin_top = 187.0
margin_right = 325.0
margin_bottom = 247.0
text = "Audio"

[node name="Video" type="Button" parent="CenterContainer/VBoxContainer" index="3"]
margin_top = 251.0
margin_right = 325.0
margin_bottom = 311.0
text = "Video"

[node name="Controls" type="Button" parent="CenterContainer/VBoxContainer" index="4"]
margin_top = 315.0
margin_right = 325.0
margin_bottom = 375.0
text = "Controls"

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer" index="5"]
margin_top = 379.0
margin_right = 325.0
margin_bottom = 439.0
text = "Back"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Video" to="." method="_on_Video_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
